Updated CI and CD workflows

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -4,6 +4,11 @@ on:
   push:
     branches:
       - main
+      - master
+      - feature/*
+      - bugfix/*
+      - hotfix/*
+      - release/*
 
 jobs:
   deploy:
