--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -4,13 +4,10 @@ on:
   push:
     branches:
       - main
-      - feature/*
-      - bugfix/*
-      - hotfix/*
-      - release/*
+      - master
 
 jobs:
-  build-and-test:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -19,20 +16,23 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: "3.10"
 
       - name: Install dependencies
         run: |
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Run tests
-        run: |
-          pytest || echo "No tests found, skipping."
+        run: pytest || echo "No tests found"
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build-and-test
+    needs: build
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Deploy to Render
         uses: johnbeynon/render-deploy-action@v0.0.8
         with:
