--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install pytest
+
+    - name: Run Tests
+      run: pytest
 
     - name: Check Flask App
-      run: |
-        python app.py
+      run: python app.py
